syntax = "proto3";

option go_package = "/services/ticks/pkg/grpc/proto";

package ticks;

service TicksService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Unregister(UnregisterRequest) returns (UnregisterResponse) {}
}

message RegisterRequest {
    string exchange = 1;
    string pair_symbol = 2;
}

message RegisterResponse {
    int64 registered_count = 1;
}

message UnregisterRequest {
    string exchange = 1;
    string pair_symbol = 2;
}

message UnregisterResponse {
    int64 registered_count = 1;
}

message Tick {
    string time = 1;
    string exchange = 2;
    string pair_symbol = 3;
    double price = 4;
}
